# ORBSLAM2_MapCompression

./: .gitignore  README.md
3dMap/: BA.cpp  BA.h  BoostArchiver.h  CMakeLists.txt  Converter.h  DataBase.cpp  DataBase.h  Keyframe.h  Map.h  Transform.cpp  main_3dmap.cpp  undistortion_euroc.cpp  utils.cpp  utils.h
3dMap/include/: BoostArchiver.h  Converter.h  DataBase.h  Keyframe.h  Map.h  Parameter.h  map_viewer.h  utils.h
3dMap/src/: Converter.cpp  DataBase.cpp  map_viewer.cpp  utils.cpp
Compression/: BA.cpp  BA.h  Converter.h  utils.cpp  utils.h
ORB_SLAM2/: CMakeLists.txt  CameraTrajectory.txt  EurocMH03_DB_Trajectory_result.txt  Kitti02_DB_Trajectory_result.txt  Kitti06_DB_Trajectory_result.txt
ORB_SLAM2/Examples/Stereo/: EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  MH01_Cam0Pose.txt  stereo_euroc.cc  stereo_kitti.cc
ORB_SLAM2/Examples/Stereo/EuRoC_TimeStamps/: MH01_(copy).txt
ORB_SLAM2/include/: BoostArchiver.h  Converter.h  DataBase.h  KeyFrame.h  ORBVocabulary.h  Optimizer.h  System.h  Tracking.h  VPStest.h  gurobi_helper.h
ORB_SLAM2/src/: Converter.cc  DataBase.cpp  Frame.cc  KeyFrame.cc  Optimizer.cc  System.cc  Tracking.cc  VPStest.cpp  gurobi_helper.cpp
VPStest/: CMakeLists.txt  Converter.h  DataBase.cpp  DataBase.h  Evaluatation.h  Evaluation.cpp  Evaluation_euroc.cpp  LoadResult.cpp  ORBVocabulary.h  Parameter.h  SaveData.cpp  VPStest.cpp  VPStest.h  VPStestResult.cpp  VPStestResult.h  dbow2test.cpp  main.cpp  main_euroc.cpp  main_kitti.cpp  main_kitti_query_one_image.cpp  map_viewer.cpp  map_viewer.h  undistortion_euroc.cpp  utils.cpp  utils.h
VPStest/EuroC/: BoostArchiver.h  CMakeLists.txt  DataBase.cpp  DataBase.h  Evaluatation.h  Evaluation_euroc.cpp  GT_trajectory.cpp  LoadResult.cpp  Parameter.h  Query_one_Image.cpp  VPStest.cpp  VPStest.h  VPStestResult.cpp  VPStestResult.h  main_euroc.cpp  main_euroc_compressed.cpp  undistortion_euroc.cpp  utils.cpp
VPStest/EuroC/include/: BA.h  BoostArchiver.h  Converter.h  DataBase.h  Evaluation_euroc.h  Parameter.h  VPStest.h  utils.h
VPStest/EuroC/src/: Converter.cpp  DataBase.cpp  VPStest.cpp  map_viewer.cpp  utils.cpp
VPStest/Kitti/: .main_kitti_query_one_image.cpp.swp  BoostArchiver.h  CMakeLists.txt  Evaluation.cpp  ORBextractor.cc  ORBextractor.h  Parameter.h  VPStest.cpp  utils.h
